Update project versions: Spring Boot 2.1.6 -> 3.0.2, Gradle 5.4.1 -> 8.0.1, checkstyle 8.23 -> 10.7.0; JDK 8/11 -> 17; JavaFX 11 -> 17; lombok 1.18 -> 1.18.26; JUnit4 -> JUnit5; fix checkstyle errors